Add display country data method to update UI

--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
             <div id="dashboard-country-info" class="dashboard-country-info">
               
               <div class="dashboard-country-header">
-                <img src="https://flagcdn.com/w160/eg.png" alt="Egypt" class="dashboard-country-flag">
+                <img src="" alt="" class="dashboard-country-flag">
                 <div class="dashboard-country-title">
-                  <h3>Egypt</h3>
-                  <p class="official-name">Arab Republic of Egypt</p>
-                  <span class="region"><i class="fa-solid fa-location-dot"></i> Africa • Northern Africa</span>
+                  <h3></h3>
+                  <p class="official-name"></p>
+                  <span class="region"> </span>
                 </div>
               </div>
               
@@ -238,7 +238,7 @@
                 <div class="dashboard-country-detail">
                   <i class="fa-solid fa-building-columns"></i>
                   <span class="label">Capital</span>
-                  <span class="value">Cairo</span>
+                  <span class="value"></span>
                 </div>
                 <div class="dashboard-country-detail">
                   <i class="fa-solid fa-users"></i>
