populate the current weather hero card

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     >
                     <select id="global-country" class="form-select">
                       <option value="" selected>Select Country</option>
-                      
+
                       <!-- TODO: Populate dynamically from API -->
                     </select>
                   </div>
@@ -717,7 +717,7 @@
               </div>
               <div class="view-header-content">
                 <h2>Weather Forecast</h2>
-                <p>Check 7-day weather forecasts for Cairo</p>
+                <p></p>
               </div>
               <div class="view-header-selection">
                 <div class="current-selection-badge">
@@ -737,8 +737,8 @@
               <div class="weather-hero-card weather-sunny">
                 <div class="weather-location">
                   <i class="fa-solid fa-location-dot"></i>
-                  <span>Cairo</span>
-                  <span class="weather-time">Saturday, January 25, 2026</span>
+                  <span></span>
+                  <span class="weather-time"></span>
                 </div>
                 <div class="weather-hero-main">
                   <div class="weather-hero-left">
@@ -746,8 +746,8 @@
                       <i class="fa-solid fa-sun"></i>
                     </div>
                     <div class="weather-hero-temp">
-                      <span class="temp-value">22</span>
-                      <span class="temp-unit">°C</span>
+                      <span class="temp-value"></span>
+                      <span class="temp-unit"></span>
                     </div>
                   </div>
                   <div class="weather-hero-right">
@@ -773,7 +773,7 @@
                   </div>
                   <div class="detail-info">
                     <span class="detail-label">Humidity</span>
-                    <span class="detail-value">45%</span>
+                    <span class="detail-value"></span>
                   </div>
                 </div>
                 <div class="weather-detail-card">
@@ -782,7 +782,7 @@
                   </div>
                   <div class="detail-info">
                     <span class="detail-label">Wind</span>
-                    <span class="detail-value">15 km/h</span>
+                    <span class="detail-value"></span>
                   </div>
                 </div>
                 <div class="weather-detail-card">
